# tlpc-sensor

./: .gitignore  CMakeLists.txt  README.md  _config.yml  control  perf.c  perf_example.c
.github/workflows/: main.yml  pull-request.yml
examples/: JNIClient.java  LWPC.java  LWPC.py  Makefile  TLPCSensor.java  client.c  client.py  heavy_workload.c  report.json
examples/j-tlpc-sensor/: pom.xml
examples/j-tlpc-sensor/src/main/java/fr/davidson/j/tlpc/sensor/: JNIClient.java
examples/tlpc-sensor/: pom.xml  report.json
examples/tlpc-sensor/src/main/java/fr/davidson/tlpc/sensor/: IndicatorPerLabel.java  IndicatorsPerIdentifier.java  Report.java  TLPCSensor.java
examples/tlpc-sensor/src/test/java/fr/davidson/tlpc/sensor/: TLPCSensorTest.java
src/: JNIClient.c  JNIClient.h  TLPCSensor.c  TLPCSensor.h  config.c  config.h  json_playground.c  main.c  map.c  map.h  perf.c  perf.h  perf_array.c  perf_array_rapl.c  perf_pfm.c  report.c  report.h  sensor.c  sensor.h  server.c  server.h
